# tarefa-iot-security-lab-p-camilo-e-maria-eduarda

./: CMakeLists.txt  README.md  iot_security_lab.c  toolchain.cmake
include/: lwipopts.h  mqtt_comm.h  xor_cipher.h
src/: mqtt_comm.c  wifi_conn.c  xor_cipher.c
subscriber/: CMakeLists.txt  main.c  repositorio_subscriber.txt  subscriber.c
